syntax = "proto3";
package pos;

// Import
import "common.proto";

service PositivityRate {
    rpc getPositivityByDepartmentPerDay(PositivityInput) returns (PositivityCollection);
    rpc getPositivityByDepartmentPerWeek(PositivityInput) returns (PositivityWeekCollection);
}

message PositivityInput {
    common.CommonInput date = 1;
    string department = 2;
}

message PositivityDayResult {
    string department = 1;
    string day = 2;
    int64 population_reference = 3;
    int64 pcr_positive = 4;
    // infection rate per 100k
    double infection_rate = 5;
}

message PositivityCollection {
    repeated PositivityDayResult rates = 1;
}

message PositivityWeekCollection {
    repeated PositivityDayResult rates = 1;
    double week_infection_rate = 2;
}
